WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280567
REGRESSION(
283790@main
) [WebDriver][GLIB] Some mouse actions stopped working
https://bugs.webkit.org/show_bug.cgi?id=280567
Summary
REGRESSION(283790@main) [WebDriver][GLIB] Some mouse actions stopped working
Lauro Moura
Reported
2024-09-28 11:51:27 PDT
One of the tests that regressed: imported/w3c/webdriver/tests/classic/perform_actions/pointer_mouse.py::test_click_element_center Failure for WPE (with WPE_BROWSER=minibrowser): session = <Session b348c6c9-1eb2-4706-8d67-75cd5928a47e>, test_actions_page = None, mouse_chain = <webdriver.client.ActionSequence object at 0x7d7b2c3edd50> def test_click_element_center(session, test_actions_page, mouse_chain): outer = session.find.css("#outer", all=False) center = get_inview_center(outer.rect, get_viewport_rect(session)) mouse_chain.click(element=outer).perform() events = get_events(session)
> assert len(events) == 4
E assert 0 == 4 E + where 0 = len([]) center = {'x': 58.0, 'y': 198.0} events = [] mouse_chain = <webdriver.client.ActionSequence object at 0x7d7b2c3edd50> outer = <WebElement node-15EBAA77-5AE9-4F63-8BF1-6CF58213BDF6> session = <Session b348c6c9-1eb2-4706-8d67-75cd5928a47e> test_actions_page = None To confirm the relation to
283790@main
, reverting it makes the test pass. Did not investigate yet why it's happening, though.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2025-08-27 09:11:17 PDT
***
Bug 291615
has been marked as a duplicate of this bug. ***
Lauro Moura
Comment 2
2025-08-27 13:32:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49956
EWS
Comment 3
2025-08-27 15:12:54 PDT
Committed
299229@main
(0ec3a1f1a8e1): <
https://commits.webkit.org/299229@main
> Reviewed commits have been landed. Closing PR #49956 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2025-08-27 15:13:13 PDT
<
rdar://problem/159310535
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug