REGRESSION(283790@main) [WebDriver][GLIB] Some mouse actions stopped working https://bugs.webkit.org/show_bug.cgi?id=280567

Reviewed by Abrar Rahman Protyasha.

Ensure we forward the `mouseInteraction` field to avoid relying on
SimulatedInputDispatcher's heuristics.

Fixes over 40 failures in w3c/classic/perform_actions.

Also updated bug reference of test_context_click, which is still failing
despite this.

* Source/WebDriver/Actions.h:
* Source/WebDriver/Session.cpp:
(WebDriver::mouseInteractionForAutomation):
(WebDriver::Session::performActions):
* Source/WebDriver/Session.h:
* WebDriverTests/TestExpectations.json:

Canonical link: https://commits.webkit.org/299229@main